cdbs (0.4.40) UNRELEASED; urgency=low

  * Acknowledge NMU (closes: #365085)
  * Added DEB_PYTHON_PACKAGES_EXCLUDE (python-distutils.mk)
    (closes: #365257)
  * cdbs-edit-patch: Avoid error message when creating new patch
  * Try patches at level 1 first, to avoid problems with patches that only
    create new files (simple-patchsys.mk) (closes: #365524)

 -- Peter Eisentraut <petere@debian.org>  Sun, 14 May 2006 00:39:00 +0200

cdbs (0.4.39-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add a sequencing point to ensure all dh_makeshlibs are run before any
    dh_shlibdeps is (closes: #365085).

 -- Pierre Habouzit <madcoder@debian.org>  Fri,  5 May 2006 21:16:19 +0200

cdbs (0.4.39) unstable; urgency=low

  * Added definitions of DEB_HOST_ARCH_CPU and DEB_HOST_ARCH_OS
    (buildvars.mk)
  * Added definition of DEB_UPSTREAM_VERSION (buildvars.mk)
  * Remove *.pyc on clean (python-distutils.mk) (closes: #252134)
  * Remove *.omf.out from help directory (gnome.mk) (closes: #292374)
  * Moved dh_shlibdeps call to binary-predeb (debhelper.mk)
    (closes: #326926)
  * Rewrote various shell conditionals as make conditionals
    (closes: #222376)
  * Added 2.5 as possible Python version
  * Remove Python build directories for every used Python version
    separately (closes: #300149); enhanced test case distutils-3.sh to
    check this
  * Deal with rules files that set DH_COMPAT (closes: #362831)
  * Removed DEB_AUTO_CLEANUP_RCS feature; no one was using that correctly
    (tarball.mk)
  * Don't clean config.cache, config.log, config.status; the upstream
    package should do that (autotools.mk, autotools-files.mk)

 -- Peter Eisentraut <petere@debian.org>  Fri, 21 Apr 2006 15:06:39 +0200

cdbs (0.4.38) unstable; urgency=low

  * Added support for uuencoded patches (patch by Christopher Martin)
    (simple-patchsys.mk) (closes: #305857); test case in patchsys-1.sh
  * Enabled use of $(cdbs_python_ver) in all package-specific targets