@@ -110,12 +110,21 @@ DEB_DH_SHLIBDEPS_ARGS = $(if $(DEB_SHLIBDEPS_LIBRARY_$(cdbs_curpkg)),-L $(DEB_SH
 DEB_DH_BUILDDEB_ENV = $(if $(DEB_DH_ALWAYS_EXCLUDE),DH_ALWAYS_EXCLUDE=$(DEB_DH_ALWAYS_EXCLUDE),)
 DEB_DH_PERL_ARGS = $(if $(DEB_PERL_INCLUDE_$(cdbs_curpkg))$(DEB_PERL_INCLUDE),$(shell echo $(DEB_PERL_INCLUDE_$(cdbs_curpkg)) $(DEB_PERL_INCLUDE)))
 
+ifneq ($(words $(DEB_DBG_PACKAGES)),0)
 ifeq ($(words $(DEB_DBG_PACKAGES)),1)
-DEB_DBG_PACKAGE_ALL = $(DEB_DBG_PACKAGES)
+DEB_DBG_PACKAGE_ALL = $(if $(strip $(foreach x,$(DEB_PACKAGES),$(DEB_DBG_PACKAGE_$(x)))),,$(DEB_DBG_PACKAGES))
+else
+ifeq (yes,$(if $(findstring no,$(foreach x,$(DEB_DBG_PACKAGES),$(if $(filter $(x:-dbg=),$(DEB_PACKAGES)),yes,no))),no,yes))
+define cdbs_deb_dbg_package_assign
+DEB_DBG_PACKAGE_$(1:-dbg=) = $(1)
+endef
+$(foreach x,$(DEB_DBG_PACKAGES),$(eval $(call cdbs_deb_dbg_package_assign,$(value x))))
+endif
 endif
 cdbs_dbg_package = $(if $(DEB_DBG_PACKAGE_$(cdbs_curpkg)),$(DEB_DBG_PACKAGE_$(cdbs_curpkg)),$(DEB_DBG_PACKAGE_ALL))
 cdbs_dbg_package_option = $(if $(cdbs_dbg_package),$(shell if [ "$(DH_COMPAT)" -eq 5 ]; then echo "--dbg-package=$(strip $(cdbs_dbg_package))"; fi))
 DEB_DH_STRIP_ARGS = $(cdbs_dbg_package_option)
+endif
 
 pre-build:: debian/compat
 
