@@ -34,6 +34,8 @@ TESTS = autotools-1.sh \
 	debhelper-3.sh \
 	debhelper-4.sh \
 	debhelper-5.sh \
+	debhelper-6.sh \
+	debhelper-7.sh \
 	ant-1.sh \
 	patchsys-1.sh
 
